--- a/pkg/crd/k8c.io/kubermatic.k8c.io_addonconfigs.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_addonconfigs.yaml
@@ -4,6 +4,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.9.2
+    kubermatic.k8c.io/location: master
   creationTimestamp: null
   name: addonconfigs.kubermatic.k8c.io
 spec:
@@ -15,74 +16,62 @@ spec:
     singular: addonconfig
   scope: Cluster
   versions:
-  - additionalPrinterColumns:
-    - jsonPath: .metadata.creationTimestamp
-      name: Age
-      type: date
-    name: v1
-    schema:
-      openAPIV3Schema:
-        description: AddonConfig specifies addon configuration. Addons can be installed
-          without a matching AddonConfig, but they will be missing a logo, description
-          and the potentially necessary form fields in the KKP dashboard to make the
-          addon comfortable to use.
-        properties:
-          apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-            type: string
-          kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-            type: string
-          metadata:
-            type: object
-          spec:
-            description: AddonConfigSpec specifies configuration of addon.
-            properties:
-              description:
-                description: Description of the configured addon, it will be displayed
-                  in the addon overview in the UI
-                type: string
-              formSpec:
-                description: Controls that can be set for configured addon
-                items:
-                  description: AddonFormControl specifies addon form control.
-                  properties:
-                    displayName:
-                      description: DisplayName is visible in the UI
-                      type: string
-                    helpText:
-                      description: HelpText is visible in the UI next to the control
-                      type: string
-                    internalName:
-                      description: InternalName is used internally to save in the
-                        addon object
-                      type: string
-                    required:
-                      description: Required indicates if the control has to be set
-                      type: boolean
-                    type:
-                      description: Type of displayed control
-                      type: string
-                  type: object
-                type: array
-              logo:
-                description: Logo of the configured addon, encoded in base64
-                type: string
-              logoFormat:
-                description: LogoFormat contains logo format of the configured addon,
-                  i.e. svg+xml
-                type: string
-              shortDescription:
-                description: ShortDescription of the configured addon that contains
-                  more detailed information about the addon, it will be displayed
-                  in the addon details view in the UI
-                type: string
-            type: object
-        type: object
-    served: true
-    storage: true
-    subresources: {}
+    - additionalPrinterColumns:
+        - jsonPath: .metadata.creationTimestamp
+          name: Age
+          type: date
+      name: v1
+      schema:
+        openAPIV3Schema:
+          description: AddonConfig specifies addon configuration. Addons can be installed without a matching AddonConfig, but they will be missing a logo, description and the potentially necessary form fields in the KKP dashboard to make the addon comfortable to use.
+          properties:
+            apiVersion:
+              description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+              type: string
+            kind:
+              description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+              type: string
+            metadata:
+              type: object
+            spec:
+              description: AddonConfigSpec specifies configuration of addon.
+              properties:
+                description:
+                  description: Description of the configured addon, it will be displayed in the addon overview in the UI
+                  type: string
+                formSpec:
+                  description: Controls that can be set for configured addon
+                  items:
+                    description: AddonFormControl specifies addon form control.
+                    properties:
+                      displayName:
+                        description: DisplayName is visible in the UI
+                        type: string
+                      helpText:
+                        description: HelpText is visible in the UI next to the control
+                        type: string
+                      internalName:
+                        description: InternalName is used internally to save in the addon object
+                        type: string
+                      required:
+                        description: Required indicates if the control has to be set
+                        type: boolean
+                      type:
+                        description: Type of displayed control
+                        type: string
+                    type: object
+                  type: array
+                logo:
+                  description: Logo of the configured addon, encoded in base64
+                  type: string
+                logoFormat:
+                  description: LogoFormat contains logo format of the configured addon, i.e. svg+xml
+                  type: string
+                shortDescription:
+                  description: ShortDescription of the configured addon that contains more detailed information about the addon, it will be displayed in the addon details view in the UI
+                  type: string
+              type: object
+          type: object
+      served: true
+      storage: true
+      subresources: {}
