--- a/pkg/crd/k8c.io/kubermatic.k8c.io_admissionplugins.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_admissionplugins.yaml
@@ -4,6 +4,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.9.2
+    kubermatic.k8c.io/location: master
   creationTimestamp: null
   name: admissionplugins.kubermatic.k8c.io
 spec:
@@ -15,36 +16,30 @@ spec:
     singular: admissionplugin
   scope: Cluster
   versions:
-  - name: v1
-    schema:
-      openAPIV3Schema:
-        description: AdmissionPlugin is the type representing a AdmissionPlugin.
-        properties:
-          apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-            type: string
-          kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-            type: string
-          metadata:
-            type: object
-          spec:
-            description: AdmissionPluginSpec specifies admission plugin name and from
-              which k8s version is supported.
-            properties:
-              fromVersion:
-                description: FromVersion flag can be empty. It means the plugin fit
-                  to all k8s versions
-                type: string
-              pluginName:
-                type: string
-            required:
-            - pluginName
-            type: object
-        type: object
-    served: true
-    storage: true
+    - name: v1
+      schema:
+        openAPIV3Schema:
+          description: AdmissionPlugin is the type representing a AdmissionPlugin.
+          properties:
+            apiVersion:
+              description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+              type: string
+            kind:
+              description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+              type: string
+            metadata:
+              type: object
+            spec:
+              description: AdmissionPluginSpec specifies admission plugin name and from which k8s version is supported.
+              properties:
+                fromVersion:
+                  description: FromVersion flag can be empty. It means the plugin fit to all k8s versions
+                  type: string
+                pluginName:
+                  type: string
+              required:
+                - pluginName
+              type: object
+          type: object
+      served: true
+      storage: true
