--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplateinstances.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplateinstances.yaml
@@ -4,6 +4,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.9.2
+    kubermatic.k8c.io/location: seed
   creationTimestamp: null
   name: clustertemplateinstances.kubermatic.k8c.io
 spec:
@@ -15,57 +16,51 @@ spec:
     singular: clustertemplateinstance
   scope: Cluster
   versions:
-  - additionalPrinterColumns:
-    - jsonPath: .spec.projectID
-      name: ProjectID
-      type: string
-    - jsonPath: .spec.clusterTemplateID
-      name: ClusterTemplateID
-      type: string
-    - jsonPath: .spec.replicas
-      name: Replicas
-      type: integer
-    - jsonPath: .metadata.creationTimestamp
-      name: Age
-      type: date
-    name: v1
-    schema:
-      openAPIV3Schema:
-        description: ClusterTemplateInstance is the object representing a cluster
-          template instance.
-        properties:
-          apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-            type: string
-          kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-            type: string
-          metadata:
-            type: object
-          spec:
-            description: ClusterTemplateInstanceSpec specifies the data for cluster
-              instances.
-            properties:
-              clusterTemplateID:
-                type: string
-              clusterTemplateName:
-                type: string
-              projectID:
-                type: string
-              replicas:
-                format: int64
-                type: integer
-            required:
-            - clusterTemplateID
-            - clusterTemplateName
-            - projectID
-            - replicas
-            type: object
-        type: object
-    served: true
-    storage: true
-    subresources: {}
+    - additionalPrinterColumns:
+        - jsonPath: .spec.projectID
+          name: ProjectID
+          type: string
+        - jsonPath: .spec.clusterTemplateID
+          name: ClusterTemplateID
+          type: string
+        - jsonPath: .spec.replicas
+          name: Replicas
+          type: integer
+        - jsonPath: .metadata.creationTimestamp
+          name: Age
+          type: date
+      name: v1
+      schema:
+        openAPIV3Schema:
+          description: ClusterTemplateInstance is the object representing a cluster template instance.
+          properties:
+            apiVersion:
+              description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+              type: string
+            kind:
+              description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+              type: string
+            metadata:
+              type: object
+            spec:
+              description: ClusterTemplateInstanceSpec specifies the data for cluster instances.
+              properties:
+                clusterTemplateID:
+                  type: string
+                clusterTemplateName:
+                  type: string
+                projectID:
+                  type: string
+                replicas:
+                  format: int64
+                  type: integer
+              required:
+                - clusterTemplateID
+                - clusterTemplateName
+                - projectID
+                - replicas
+              type: object
+          type: object
+      served: true
+      storage: true
+      subresources: {}
