--- a/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticsettings.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticsettings.yaml
@@ -4,6 +4,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.9.2
+    kubermatic.k8c.io/location: master
   creationTimestamp: null
   name: kubermaticsettings.kubermatic.k8c.io
 spec:
@@ -15,157 +16,140 @@ spec:
     singular: kubermaticsetting
   scope: Cluster
   versions:
-  - additionalPrinterColumns:
-    - jsonPath: .metadata.creationTimestamp
-      name: Age
-      type: date
-    name: v1
-    schema:
-      openAPIV3Schema:
-        description: KubermaticSetting is the type representing a KubermaticSetting.
-          These settings affect the KKP dashboard and are not relevant when using
-          the Kube API on the master/seed clusters directly.
-        properties:
-          apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-            type: string
-          kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-            type: string
-          metadata:
-            type: object
-          spec:
-            properties:
-              cleanupOptions:
-                description: CleanupOptions control what happens when a cluster is
-                  deleted via the dashboard.
-                properties:
-                  enabled:
-                    description: Enable checkboxes that allow the user to ask for
-                      LoadBalancers and PVCs to be deleted in order to not leave potentially
-                      expensive resources behind.
-                    type: boolean
-                  enforced:
-                    description: If enforced is set to true, the cleanup of LoadBalancers
-                      and PVCs is enforced.
-                    type: boolean
-                type: object
-              customLinks:
-                description: CustomLinks are additional links that can be shown the
-                  dashboard's footer.
-                items:
+    - additionalPrinterColumns:
+        - jsonPath: .metadata.creationTimestamp
+          name: Age
+          type: date
+      name: v1
+      schema:
+        openAPIV3Schema:
+          description: KubermaticSetting is the type representing a KubermaticSetting. These settings affect the KKP dashboard and are not relevant when using the Kube API on the master/seed clusters directly.
+          properties:
+            apiVersion:
+              description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+              type: string
+            kind:
+              description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+              type: string
+            metadata:
+              type: object
+            spec:
+              properties:
+                cleanupOptions:
+                  description: CleanupOptions control what happens when a cluster is deleted via the dashboard.
                   properties:
-                    icon:
-                      type: string
-                    label:
-                      type: string
-                    location:
-                      type: string
-                    url:
-                      type: string
-                  required:
-                  - icon
-                  - label
-                  - location
-                  - url
+                    enabled:
+                      description: Enable checkboxes that allow the user to ask for LoadBalancers and PVCs to be deleted in order to not leave potentially expensive resources behind.
+                      type: boolean
+                    enforced:
+                      description: If enforced is set to true, the cleanup of LoadBalancers and PVCs is enforced.
+                      type: boolean
                   type: object
-                type: array
-              defaultNodeCount:
-                description: DefaultNodeCount is the default number of replicas for
-                  the initial MachineDeployment.
-                type: integer
-              displayAPIDocs:
-                description: DisplayDemoInfo controls whether a a link to the KKP
-                  API documentation is shown in the footer.
-                type: boolean
-              displayDemoInfo:
-                description: DisplayDemoInfo controls whether a "Demo System" hint
-                  is shown in the footer.
-                type: boolean
-              displayTermsOfService:
-                description: DisplayDemoInfo controls whether a a link to TOS is shown
-                  in the footer.
-                type: boolean
-              enableDashboard:
-                description: EnableDashboard enables the link to the Kubernetes dashboard
-                  for a user cluster.
-                type: boolean
-              enableExternalClusterImport:
-                type: boolean
-              enableOIDCKubeconfig:
-                type: boolean
-              machineDeploymentVMResourceQuota:
-                properties:
-                  enableGPU:
-                    type: boolean
-                  maxCPU:
-                    description: Maximal number of vCPU
-                    type: integer
-                  maxRAM:
-                    description: Maximum RAM size in GB
-                    type: integer
-                  minCPU:
-                    description: Minimal number of vCPU
-                    type: integer
-                  minRAM:
-                    description: Minimal RAM size in GB
-                    type: integer
-                required:
-                - enableGPU
-                - maxCPU
-                - maxRAM
-                - minCPU
-                - minRAM
-                type: object
-              mlaAlertmanagerPrefix:
-                type: string
-              mlaGrafanaPrefix:
-                type: string
-              mlaOptions:
-                properties:
-                  loggingEnabled:
-                    type: boolean
-                  loggingEnforced:
-                    type: boolean
-                  monitoringEnabled:
-                    type: boolean
-                  monitoringEnforced:
-                    type: boolean
-                type: object
-              opaOptions:
-                properties:
-                  enabled:
-                    type: boolean
-                  enforced:
-                    type: boolean
-                type: object
-              restrictProjectCreation:
-                type: boolean
-              userProjectsLimit:
-                description: UserProjectsLimit is the maximum number of projects a
-                  user can create.
-                format: int64
-                type: integer
-            required:
-            - customLinks
-            - defaultNodeCount
-            - displayAPIDocs
-            - displayDemoInfo
-            - displayTermsOfService
-            - enableDashboard
-            - enableExternalClusterImport
-            - enableOIDCKubeconfig
-            - machineDeploymentVMResourceQuota
-            - mlaAlertmanagerPrefix
-            - mlaGrafanaPrefix
-            - restrictProjectCreation
-            - userProjectsLimit
-            type: object
-        type: object
-    served: true
-    storage: true
-    subresources: {}
+                customLinks:
+                  description: CustomLinks are additional links that can be shown the dashboard's footer.
+                  items:
+                    properties:
+                      icon:
+                        type: string
+                      label:
+                        type: string
+                      location:
+                        type: string
+                      url:
+                        type: string
+                    required:
+                      - icon
+                      - label
+                      - location
+                      - url
+                    type: object
+                  type: array
+                defaultNodeCount:
+                  description: DefaultNodeCount is the default number of replicas for the initial MachineDeployment.
+                  type: integer
+                displayAPIDocs:
+                  description: DisplayDemoInfo controls whether a a link to the KKP API documentation is shown in the footer.
+                  type: boolean
+                displayDemoInfo:
+                  description: DisplayDemoInfo controls whether a "Demo System" hint is shown in the footer.
+                  type: boolean
+                displayTermsOfService:
+                  description: DisplayDemoInfo controls whether a a link to TOS is shown in the footer.
+                  type: boolean
+                enableDashboard:
+                  description: EnableDashboard enables the link to the Kubernetes dashboard for a user cluster.
+                  type: boolean
+                enableExternalClusterImport:
+                  type: boolean
+                enableOIDCKubeconfig:
+                  type: boolean
+                machineDeploymentVMResourceQuota:
+                  properties:
+                    enableGPU:
+                      type: boolean
+                    maxCPU:
+                      description: Maximal number of vCPU
+                      type: integer
+                    maxRAM:
+                      description: Maximum RAM size in GB
+                      type: integer
+                    minCPU:
+                      description: Minimal number of vCPU
+                      type: integer
+                    minRAM:
+                      description: Minimal RAM size in GB
+                      type: integer
+                  required:
+                    - enableGPU
+                    - maxCPU
+                    - maxRAM
+                    - minCPU
+                    - minRAM
+                  type: object
+                mlaAlertmanagerPrefix:
+                  type: string
+                mlaGrafanaPrefix:
+                  type: string
+                mlaOptions:
+                  properties:
+                    loggingEnabled:
+                      type: boolean
+                    loggingEnforced:
+                      type: boolean
+                    monitoringEnabled:
+                      type: boolean
+                    monitoringEnforced:
+                      type: boolean
+                  type: object
+                opaOptions:
+                  properties:
+                    enabled:
+                      type: boolean
+                    enforced:
+                      type: boolean
+                  type: object
+                restrictProjectCreation:
+                  type: boolean
+                userProjectsLimit:
+                  description: UserProjectsLimit is the maximum number of projects a user can create.
+                  format: int64
+                  type: integer
+              required:
+                - customLinks
+                - defaultNodeCount
+                - displayAPIDocs
+                - displayDemoInfo
+                - displayTermsOfService
+                - enableDashboard
+                - enableExternalClusterImport
+                - enableOIDCKubeconfig
+                - machineDeploymentVMResourceQuota
+                - mlaAlertmanagerPrefix
+                - mlaGrafanaPrefix
+                - restrictProjectCreation
+                - userProjectsLimit
+              type: object
+          type: object
+      served: true
+      storage: true
+      subresources: {}
