--- a/pkg/crd/k8c.io/kubermatic.k8c.io_externalclusters.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_externalclusters.yaml
@@ -85,6 +85,8 @@ spec:
                               type: string
                           type: object
                           x-kubernetes-map-type: atomic
+                        location:
+                          type: string
                         name:
                           type: string
                         resourceGroup:
@@ -94,13 +96,9 @@ spec:
                         tenantID:
                           type: string
                       required:
-                        - clientID
-                        - clientSecret
-                        - credentialsReference
+                        - location
                         - name
                         - resourceGroup
-                        - subscriptionID
-                        - tenantID
                       type: object
                     bringyourown:
                       type: object
@@ -143,10 +141,8 @@ spec:
                         secretAccessKey:
                           type: string
                       required:
-                        - accessKeyID
                         - name
                         - region
-                        - secretAccessKey
                       type: object
                     gke:
                       properties:
@@ -186,7 +182,6 @@ spec:
                           type: string
                       required:
                         - name
-                        - serviceAccount
                       type: object
                     kubeone:
                       properties:
