--- a/hack/ci/testdata/seed.yaml
+++ b/hack/ci/testdata/seed.yaml
@@ -65,15 +65,18 @@ spec:
       country: DE
       spec:
         vsphere:
-          endpoint: "https://vcenter.qa.lab.kubermatic.io"
-          datacenter: "dc-1"
-          datastore: "HS-FreeNAS"
-          cluster: "cl-1"
-          rootPath: "/dc-1/vm/e2e-tests"
+          cluster: vcenter.dc.k8c.io
+          datacenter: Hamburg
+          datastore: alpha1
+          endpoint: https://vcenter.dc.k8c.io
+          ipv6Enabled: true
+          rootPath: /Hamburg/vm/Kubermatic-ci
           templates:
-            ubuntu: "machine-controller-e2e-ubuntu"
-            centos: "machine-controller-e2e-centos"
-            coreos: "machine-controller-e2e-coreos"
+            centos: kkp-centos-7
+            flatcar: kkp-flatcar-3033.2.2
+            rhel: kkp-rhel-8.6
+            ubuntu: kkp-ubuntu-20.04
+            rockylinux: kkp-rockylinux-8
     azure-westeurope:
       location: "Azure West europe"
       country: NL
