--- a/hack/ci/testdata/kubermatic_konnectivity.yaml
+++ b/hack/ci/testdata/kubermatic_konnectivity.yaml
@@ -29,4 +29,5 @@ spec:
     apiserverReplicas: 1
   featureGates:
     KonnectivityService: true
+    EtcdLauncher: true
     HeadlessInstallation: true
