--- a/hack/ci/testdata/seed.yaml
+++ b/hack/ci/testdata/seed.yaml
@@ -70,7 +70,8 @@ spec:
           cluster: vcenter.dc.k8c.io
           datacenter: Hamburg
           datastore: alpha1
-          endpoint: https://vcenter.dc.k8c.io
+          endpoint: https://10.10.0.100
+          allowInsecure: true
           rootPath: /Hamburg/vm/Kubermatic-ci
           templates:
             centos: kkp-centos-7
