--- a/hack/ci/testdata/seed.yaml
+++ b/hack/ci/testdata/seed.yaml
@@ -71,12 +71,13 @@ spec:
           datacenter: Hamburg
           datastore: alpha1
           endpoint: https://vcenter.dc.k8c.io
-          rootPath: /Hamburg/vm/Kubermatic-dev
+          rootPath: /Hamburg/vm/Kubermatic-ci
           templates:
-            centos: centos-7
-            flatcar: flatcar-stable
-            rhel: rhel-8.6
-            ubuntu: ubuntu-20.04
+            centos: kkp-centos-7
+            flatcar: kkp-flatcar-3033.2.2
+            rhel: kkp-rhel-8.6
+            ubuntu: kkp-ubuntu-20.04
+            rockylinux: kkp-rockylinux-8
     azure-westeurope:
       location: "Azure West europe"
       country: NL
