[release/v2.21] fix spellcheck findings

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_users.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_users.yaml
@@ -67,7 +67,7 @@ spec:
                   type: string
                 type: array
               id:
-                description: 'ID is an unnused legacy field. Deprecated: do not set
+                description: 'ID is an unused legacy field. Deprecated: do not set
                   this field anymore.'
                 type: string
               invalidTokensReference:
