--- a/pkg/crd/k8c.io/kubermatic.k8c.io_addons.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_addons.yaml
@@ -119,7 +119,7 @@ spec:
             - name
             type: object
           status:
-            description: Status contrains information about the reconciliation status.
+            description: Status contains information about the reconciliation status.
             properties:
               conditions:
                 additionalProperties:
